@@ -1734,6 +1734,18 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
        PNG_LIBPNG_VER_STRING);
 #endif
 
+#if (PNG_LIBPNG_VER >= 10400)
+#  ifndef  PNG_TRANSFORM_GRAY_TO_RGB    /* Added at libpng-1.4.0beta67 */
+  if (image_info->verbose)
+    {
+      printf("Your PNG library (libpng-%s) is an old beta version.\n",
+           PNG_LIBPNG_VER_STRING);
+      printf("Please update it.\n");
+    }
+#  endif
+#endif
+
+
   quantum_info = (QuantumInfo *) NULL;
   image=mng_info->image;
 
